Updating CHANGELOG such that it includes merges

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,13 @@
-[2019-10-19] fc495a4 (HEAD -> master, tag: 12.1.0, origin/master, origin/HEAD) Creating `auth.delay: 0` config value to afford random timing of authorization validation on protected routes - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-22] d020f32 (HEAD -> master, tag: 13.0.0, origin/master, origin/HEAD) Merge pull request #115 from avoidwork/authRefactor - GitHub (noreply@github.com)
+[2019-10-22] e3fddaf Major version bump due to breaking changes of the router & how routes are structured & processed - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-22] ef47050 Fixing a middleware order of ops bug that was exposed by changing how the URIs were tested to align with the router update - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-22] ed8001d Removing some closures - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-21] 105a74e Removing a conditional - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-21] 942e4fb Reducing some errors - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-21] 2f99d0a Updating router, exposing issues with current auth pipeline - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-19] 257f73f Updating `CHANGELOG` - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-19] fc495a4 (tag: 12.1.0) Creating `auth.delay: 0` config value to afford random timing of authorization validation on protected routes - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-13] ecffd99 Merge pull request #114 from avoidwork/avoidwork-patch-1 - GitHub (noreply@github.com)
 [2019-10-13] 38460cf Create FUNDING.yml - GitHub (noreply@github.com)
 [2019-10-08] f9e4080 Creating `changelog` npm script & `CHANGELOG` output - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-02] d2d51e9 (tag: 12.0.9) Fixing a regex bug in `keymaster()` middleware, updating dependencies, removing 'watch' grunt module & task - Jason Mulligan (jamullig@adobe.com)
@@ -11,11 +20,13 @@
 [2019-09-04] 304f584 Adjusting assignments in `send()` - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-09-04] 1f8c0c0 (tag: 12.0.1) Fixing handling of redirects, updating test framework - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-09-03] cd701c6 (tag: 12.0.0) Moving call to `this.send()` outside of conditional so timing header is present on file streams (og behavior) - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-09-03] 8f495dd Merge pull request #113 from avoidwork/multimap - GitHub (noreply@github.com)
 [2019-09-03] c37ce46 Changing `EventEmitter` methods to align with (unsupported) node.js 8x - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-09-03] 1dec715 Fixing typo due to IDE focus - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-09-03] 451593e Refactoring `connect()` to create a facade of `res.send()` such that the code is clearer - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-09-02] 7b5bc6b Adding new lock file - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-09-02] 3580d96 Updating dependencies, initial refactoring to new woodland - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-08-26] afee006 Merge pull request #112 from avoidwork/dependabot/npm_and_yarn/eslint-utils-1.4.2 - GitHub (noreply@github.com)
 [2019-08-26] 7fe1771 Bump eslint-utils from 1.4.0 to 1.4.2 - GitHub (noreply@github.com)
 [2019-08-10] ca53c92 (tag: 11.4.0) Updating woodland router to fix performance regression - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-08-10] 509f4b7 (tag: 11.3.1) Updating woodland router - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -23,6 +34,7 @@
 [2019-08-10] d609b6f Upgrading woodland router & re-enabling test that was failing due to http1 piping, exposes flaw in local auth & etag handling - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-08-10] 3b6a372 Upgrading woodland router, disabling failing test (why is it timing out?) - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-08-07] 1de5ea2 (tag: 11.2.2) Updating dependencies - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-07-10] e3fcbe9 Merge pull request #111 from avoidwork/dependabot/npm_and_yarn/lodash-4.17.14 - GitHub (noreply@github.com)
 [2019-07-10] 4ebe9c7 Bump lodash from 4.17.11 to 4.17.14 - GitHub (noreply@github.com)
 [2019-06-08] a61fac8 (tag: 11.2.1) Fixing attempting to cast `undefined` & `null` within `hypermedia.marshal()`, fixes #110 - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-06-04] ce3b14b (tag: 11.2.0) Creating `corsExpose` string in config for appending to end of `access-control-expose-headers`, adding CSRF token name to `access-control-expose-headers` - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -153,6 +165,7 @@
 [2018-10-23] 54fda89 (tag: 9.0.2) DRY - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2018-10-23] 388e888 (tag: 9.0.1) Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2018-10-23] e8f3825 (tag: 9.0.0) Dropping `uws` & `coap` dependencies, updating README, updating `package.json` description - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2018-10-23] 250eaa3 (tag: 8.2.0) Merge pull request #104 from avoidwork/apiFlex - GitHub (noreply@github.com)
 [2018-10-23] d40be16 Updating `travis-ci.org` configuration - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2018-10-23] 50e0dde Version typo lol - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2018-10-23] 7bf85cd Updating woodland router, fixing a reference error in `guard()` middleware - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -215,8 +228,10 @@
 [2018-07-09] 41e4486 Minimizing relying on the router for error termination - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2018-07-09] 44b93f1 Removing unneeded ops & decoration - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2018-07-09] 7ea4473 (tag: 8.0.1) oops! deployment regression - Jason Mulligan (jamullig@adobe.com)
+[2018-07-09] abd5bce (tag: 8.0.0) Merge pull request #100 from avoidwork/rewrite - GitHub (noreply@github.com)
 [2018-07-09] bffec72 Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2018-07-09] cd18909 Reverting bad merge changes - Jason Mulligan (jamullig@adobe.com)
+[2018-07-09] d644975 Intentional poor merge to revert - Jason Mulligan (jamullig@adobe.com)
 [2018-07-09] ca203bf Upgrading woodland router for needed HTTP2 shim for passport strategies - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2018-07-09] f4b87c0 Updating test descriptions - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2018-07-09] 9f64202 Updating HTTP2 local auth tests - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -398,6 +413,7 @@
 [2017-10-20] 15a773b (tag: 5.2.5) Updating router - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-10-19] cddc6de Missed lock file - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-10-18] 4220ee5 (tag: 5.2.4) Adding forth parameter to `JSON` serialization such that an `Error` stack could be echoed to the end user - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2017-10-18] b0221c1 (tag: 5.2.3) Merge pull request #95 from avoidwork/6.0-dev - GitHub (noreply@github.com)
 [2017-10-18] 9485c84 Fixing path error in `static()`, patch version bump - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-10-18] b2b2b35 In progress - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-10-18] 6dee384 Updating router - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -454,6 +470,7 @@
 [2017-08-17] c319c7f (tag: 5.1.2) Switching to `String.raw()` template literals - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-08-17] 26d61e5 (tag: 5.1.1) Removing unused `middleware.noop()`, version bump - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-08-17] e686d12 Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2017-08-17] bb76b20 (tag: 5.1.0, origin/5.1) Merge pull request #88 from avoidwork/slack - GitHub (noreply@github.com)
 [2017-08-17] 10a1f3c Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-08-17] 04b2ca6 Changing truthy to explicit comparisons - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-08-17] 520b684 Wiring `passport-slack` into `utility.auth()` - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -468,6 +485,7 @@
 [2017-07-29] 9f76f57 (tag: 5.0.2) Removing unneeded `regex` keys, removing truthy statements - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-07-28] f32323c (tag: 5.0.1, origin/5.0) Fixing `csv` downloads by correcting the `content-disposition` header (a few cases), removing `utility.merge()` because just routes back to `tiny-merge` & is now used much, adding more assertions to `text/csv` tests - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-07-26] 3bee6e9 Removing an unneeded file - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2017-07-26] 01d5085 (tag: 5.0.0) Merge pull request #86 from avoidwork/slim - GitHub (noreply@github.com)
 [2017-07-26] 77042bf Updating `ETag` middleware so the default `cache-control` header value will be able to generate an `ETag`, updating test to capture an `ETag`, removing `cache-control` header from sample gateway - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-07-26] e2a76dc Dropping 6.x support 'cause API change - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-07-26] f4827cb Updating tag middleware, tweaking logic for creating an etag header - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -506,6 +524,7 @@
 [2017-06-29] ed335f4 (tag: 4.5.25, origin/4.5) Removing a truthy, moving `RegExp` into `regex` - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-06-22] 7b665ac 1 lining a statement - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-06-22] 1032376 Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2017-06-22] 88d5d56 Merge branch 'master' of github.com:avoidwork/tenso - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-06-22] 6b3ad44 Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-06-17] d958f4c (tag: 4.5.24) Simplifying `sanitize()` within the renderers - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-06-16] c5bd840 (tag: 4.5.23) oops! should've used `sanitize()` last commit, one lining - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -529,6 +548,7 @@
 [2017-05-22] 840cb2f (tag: 4.5.8) Fixing JSON transmission from the browsable interface - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-22] 63b6832 (tag: 4.5.7) oops - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-22] ebbbbf0 (tag: 4.5.6) Removing requirement of the request body to have a value before submitting - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2017-05-21] edd124b (tag: 4.5.5) Merge pull request #81 from avoidwork/fixSession - GitHub (noreply@github.com)
 [2017-05-21] d42d7b6 Updating `Session` portion of README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-21] 83ea916 Turning off `secure` feature of cookie since it requires HTTPS for round trips and that's not a fantastic default for load balanced applications - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-21] 0f4fe06 Configuring session cookie better - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -537,11 +557,13 @@
 [2017-05-18] 4b4c2b4 (tag: 4.5.2) Fixing lint errors - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-18] c734f27 (tag: 4.5.1) Adding a `cache-control` header with the value of `public, max-age=n` for static assets served for browsable interface, upgrades server - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-18] 14eee77 (tag: 4.5.0) Upgrading server, removing default `index` configuration values by specifying an empty array (skips unneeded file system checks), map changed between windows & macos - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2017-05-18] 52ac472 Merge pull request #80 from avoidwork/newTemplate - GitHub (noreply@github.com)
 [2017-05-18] da646b2 Moving HTML renderer template out of the webroot folder so it cannot be accessed out of context - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-17] 43253aa Updating API tests to expect `application/json` - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-17] c5f8a52 oops - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-17] 8009bef oops - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-17] 447bd52 ie? - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2017-05-17] 24035c0 Merging master - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-17] 7c685d0 Wiring up the response modal - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-17] 7ef4cea Adding UI states - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-17] 5918801 Hiding the headers column for mobile devices - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -580,6 +602,7 @@
 [2017-05-15] c6d528a Setting up a filewatcher compile within webstorm for the new application - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-15] db811ab Adding `static` configuration property for the browsable interface - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-15] e71bad7 Serving the partially functional new template - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2017-05-15] 6f04497 Merge branch 'master' into newTemplate - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-14] 0d32d66 (tag: 4.4.1) Upgrading the server - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-14] e448288 (tag: 4.4.0) Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-05-14] 64892f3 Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -595,6 +618,7 @@
 [2017-04-18] 633604f Reserving `/assets/*` in README; is this a 4.0 situation? - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-04-18] 60f9c72 adding a local dev server script to build the template separate from tenso - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-04-18] 9b4e521 Fixing loading bulma - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2017-04-18] c3ee7df Merging master - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-04-17] e999eca Initial changes to a new template (WIP) - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-04-12] cf37f18 (tag: 4.3.34) Updating server, coap, session, & yaml dependencies - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2017-03-30] 0230d84 (tag: 4.3.33) Updating `uws` dependency - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -638,6 +662,7 @@
 [2017-01-01] 39f6886 (tag: 4.3.1) Streamlining an assignment in `middleware.js`, updating README with a link to the sample application in github - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-12-28] fe87c72 (tag: 4.3.0) Changing default JSON output to have no padding, moving `regex.id` & `regex.hypermedia` definitions into `config.json` & allowing for overriding of any default from there - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-12-21] 5d66a2b (tag: 4.2.0, origin/4.2) Adding JWT tests - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2016-12-21] 1304ebd Merge pull request #71 from avoidwork/jwt - GitHub (noreply@github.com)
 [2016-12-21] 5eda63e Updating README, removing customization to `sample.js` - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-12-21] dfa8a7f Specifying the JWT token scheme by config - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-12-21] 2cf1041 Updating sample for test purposes - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -683,6 +708,7 @@
 [2016-07-07] 842c05e Updating test with a parameter route - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-07-07] 2af54a4 Updating server - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-07-07] 403b33d (tag: 4.0.1) Updating server to get a logging fix - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2016-07-06] 80bd81d Merge pull request #64 from avoidwork/woodland - GitHub (noreply@github.com)
 [2016-07-06] 87ccddf (tag: 4.0.0) Forgot the travis-ci config! build error :( - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-07-06] 0e1adb7 Upgrading turtle.io to get a correction to the middleware pipeline - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-07-06] 4ed556e Updating eslint config, getting another test passing, lint changes - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -715,6 +741,7 @@
 [2016-02-21] 018cd48 Fleshing out the WebSocket integration - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-02-21] 158028d Adding a `content-disposition` header to the `CSV` renderer, removing `this.messages`, adding websocket module (WIP) - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-02-17] f912e3b (tag: 3.1.1, origin/3.1) Fixing `error()` such that it passes a response body (regression [for building on top] due to refactoring) - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2016-02-16] 475ea2f (tag: 3.1.0) Merge pull request #58 from avoidwork/3.1-dev - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-02-16] 6a55062 Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-02-16] 9dc3af5 Updating travis-ci.org config - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2016-02-16] e16ac83 Updating turtle.io dependency - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -732,6 +759,7 @@
 [2015-12-20] 03a3b1f Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-12-20] bfc6099 Updating README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-12-20] e28bf81 (tag: 3.0.1) Fixing the XML renderer via dependency update - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2015-12-19] 0783d3c (tag: 3.0.0) Merge pull request #55 from avoidwork/3.0-dev - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-12-19] c95c0d1 Removing an unneeded call to `middleware.rate()` on guarded routes - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-12-19] 54ec318 Returning `grunt-cli` dev dep - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-12-19] 8561d6a Fixing rate limit implementation in `zuul()`, fixing test expectation - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -775,6 +803,7 @@
 [2015-06-17] 8b31fec Updating CHANGELOG - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-06-17] 34b7873 (tag: 2.0.1) Updating README, version bump for npm - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-06-15] 41d328b Updating CHANGELOG - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2015-06-15] 3ae70a2 (tag: 2.0.0) Merge pull request #45 from avoidwork/pre-2.0 - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-06-15] 2c79ac6 Simplifying `keymaster()`, updating docs - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-06-15] df57fb2 Putting route validation a head of csrf validation, fixes #48 - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-06-15] a55a1ea Making hypermedia generation smartr, fixes #46 - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -859,6 +888,7 @@
 [2015-03-29] 30c9455 (tag: 1.3.4) Fixing visibility of all response headers, fixes #27 - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-03-29] 8eddad5 (tag: 1.3.3) Fixing browsable API URL header, fixes #26 - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-03-29] f564837 (tag: 1.3.2) Embedding CSS, & JavaScript in browsable API template, fixes #25 - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2015-03-29] 8f0debe (tag: 1.3.1) Merge branch 'master' of https://github.com/avoidwork/tenso - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-03-29] 4eea940 Fixing the browsable `status` header value - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-03-29] 5798ec4 Fixing the browsable `status` header value - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2015-03-29] 9076695 Updating CHANGELOG - Jason Mulligan (jason.mulligan@avoidwork.com)
@@ -884,6 +914,7 @@
 [2015-01-07] 9509cf7 Partial fix for #22, requires a change in turtle.io - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2014-12-17] 7ce7715 Simplifying a statement, added gitter badge to README - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2014-12-15] a6e878a Update README.md - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2014-12-15] bbd94c4 Merge pull request #21 from gitter-badger/gitter-badge - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2014-12-15] 02de32e Added Gitter badge - The Gitter Badger (badger@gitter.im)
 [2014-12-13] 1cd9036 (tag: 1.0.1, origin/1.0) Fixing `this.respond()` by not assuming a `cache-control` header exists - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2014-12-13] dc8fb1d Updating turtle.io dependency & fixing how tests are written - Jason Mulligan (jason.mulligan@avoidwork.com)
