--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-[2019-10-22] d020f32 (HEAD -> master, tag: 13.0.0, origin/master, origin/HEAD) Merge pull request #115 from avoidwork/authRefactor - GitHub (noreply@github.com)
+[2019-10-23] e828820 (HEAD -> master, tag: 13.0.1, origin/master, origin/HEAD) Specifying `content-length` values on 206 tests - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-23] 78828a3 Updating woodland router, fixing 206 tests, returning 204 response for `OPTIONS` requests routing through `keymaster()` - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-23] ce00d7d Updating `woodland` router, refactoring `keymaster()` to utilize `req.last()` - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-22] 5343949 Updating CHANGELOG such that it includes merges - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-22] d020f32 (tag: 13.0.0) Merge pull request #115 from avoidwork/authRefactor - GitHub (noreply@github.com)
 [2019-10-22] e3fddaf Major version bump due to breaking changes of the router & how routes are structured & processed - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-22] ef47050 Fixing a middleware order of ops bug that was exposed by changing how the URIs were tested to align with the router update - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-22] ed8001d Removing some closures - Jason Mulligan (jason.mulligan@avoidwork.com)
