--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,11 @@
-[2019-10-23] e828820 (HEAD -> master, tag: 13.0.1, origin/master, origin/HEAD) Specifying `content-length` values on 206 tests - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-24] f1ce841 (HEAD -> master, tag: 13.0.5, origin/master, origin/HEAD) Version bump to release change - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-24] f438e52 Changing how `Base` is defined - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-24] a7e8bfa (tag: 13.0.4) Updating `woodland` router - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-24] 2c359e1 (tag: 13.0.3) Removing an unneeded conditional due to `visible > 0` condition in the `allowed()` method of the router - Jason Mulligan (jamullig@adobe.com)
+[2019-10-24] 2605ba9 (tag: 13.0.2) Reducing `keymaster()` middleware such that routes which do not terminate will 500 - Jason Mulligan (jamullig@adobe.com)
+[2019-10-24] b65d45b Updating `woodland` router - Jason Mulligan (jamullig@adobe.com)
+[2019-10-23] 309fdbc Updating CHANGELOG - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-23] e828820 (tag: 13.0.1) Specifying `content-length` values on 206 tests - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-23] 78828a3 Updating woodland router, fixing 206 tests, returning 204 response for `OPTIONS` requests routing through `keymaster()` - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-23] ce00d7d Updating `woodland` router, refactoring `keymaster()` to utilize `req.last()` - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-22] 5343949 Updating CHANGELOG such that it includes merges - Jason Mulligan (jason.mulligan@avoidwork.com)
