--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,19 @@
-[2019-10-24] f1ce841 (HEAD -> master, tag: 13.0.5, origin/master, origin/HEAD) Version bump to release change - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] 4adbbea (tag: 14.0.0) Merge pull request #117 from avoidwork/cleanUP - GitHub (noreply@github.com)
+[2019-10-26] 1ec5275 (origin/cleanUP, cleanUP) thanks webstorm... - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] c8a8612 Merge pull request #116 from avoidwork/cleanUP - GitHub (noreply@github.com)
+[2019-10-26] cf84f30 Adding benchmark file - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] 9290e7e Setting headers instead of passing them - part deux - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] 5682a39 Setting headers instead of passing them - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] 25ea1a2 Fixing a lint error, updating lock file - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] b829d68 Major version bump for change to `renderer()` signature - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] eac668e Removing an unneeded 'OR' - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] ad2a4a1 Fixing `render()` such that `accepts` is the correct value - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] 734d866 Cleaning up renderers & other functions (WIP) - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] 57b5e4a Fixing regression & refactoring `indent()` used by renderers - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-24] 69d1cec Changing module loaded in `dtrace()` - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-24] 0f4274f Swapping in some `for ... of` - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-24] 063bf86 Updating CHANGELOG - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-24] f1ce841 (tag: 13.0.5) Version bump to release change - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-24] f438e52 Changing how `Base` is defined - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-24] a7e8bfa (tag: 13.0.4) Updating `woodland` router - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-24] 2c359e1 (tag: 13.0.3) Removing an unneeded conditional due to `visible > 0` condition in the `allowed()` method of the router - Jason Mulligan (jamullig@adobe.com)
