--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
+[2019-11-05] 909ab3f (HEAD -> master, tag: 14.0.1, origin/master, origin/HEAD) Updating README, version bump to release - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] a18176b Updating CHANGELOG - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] a982054 Fixing lint error & failing tests due to changing the default value - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] 27ac59d thanks webstorm... - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-26] 4adbbea (tag: 14.0.0) Merge pull request #117 from avoidwork/cleanUP - GitHub (noreply@github.com)
-[2019-10-26] 1ec5275 (origin/cleanUP, cleanUP) thanks webstorm... - Jason Mulligan (jason.mulligan@avoidwork.com)
+[2019-10-26] 1ec5275 thanks webstorm... - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-26] c8a8612 Merge pull request #116 from avoidwork/cleanUP - GitHub (noreply@github.com)
 [2019-10-26] cf84f30 Adding benchmark file - Jason Mulligan (jason.mulligan@avoidwork.com)
 [2019-10-26] 9290e7e Setting headers instead of passing them - part deux - Jason Mulligan (jason.mulligan@avoidwork.com)
